--- a/.github/workflows/nightly-data-file-change.yml
+++ b/.github/workflows/nightly-data-file-change.yml
@@ -48,6 +48,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
+          . ./functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           . ${{ github.workspace }}/common/nightly-data-file-change.ps1 `
           -GitHubToken ${{ secrets.token }} `
@@ -57,4 +58,5 @@ jobs:
           -DeviceDetectionUrl ${{ secrets.device-detection-url }} `
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
-          -DryRun $DryRun
+          -DryRun $DryRun `
+          *>&1 | CaptureOutputForGit
