--- a/.github/workflows/nightly-package-update.yml
+++ b/.github/workflows/nightly-package-update.yml
@@ -44,6 +44,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
+          . ./functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           . ${{ github.workspace }}/common/nightly-package-update.ps1 `
           -GitHubToken ${{ secrets.token }} `
@@ -52,4 +53,5 @@ jobs:
           -RunId ${{ github.run_id }} `
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
-          -DryRun $DryRun
+          -DryRun $DryRun `
+          *>&1 | CaptureOutputForGit
