--- a/.github/workflows/nightly-data-file-change.yml
+++ b/.github/workflows/nightly-data-file-change.yml
@@ -48,7 +48,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           . ${{ github.workspace }}/common/nightly-data-file-change.ps1 `
           -GitHubToken ${{ secrets.token }} `
