--- a/.github/workflows/nightly-submodule-update.yml
+++ b/.github/workflows/nightly-submodule-update.yml
@@ -44,7 +44,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           . ${{ github.workspace }}/common/nightly-submodule-update.ps1 `
           -GitHubToken ${{ secrets.token }} `
