--- a/.github/workflows/nightly-pr-to-main.yml
+++ b/.github/workflows/nightly-pr-to-main.yml
@@ -68,7 +68,7 @@ jobs:
         id: configure
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           . ${{ github.workspace }}/common/nightly-pr-to-main_configure-pr.ps1 `
           -RepoName ${{ inputs.repo-name }} `
           -OrgName ${{ inputs.org-name }} `
@@ -77,7 +77,7 @@ jobs:
           -PullRequestId ${{ inputs.pull-request-id }} `
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
 
   Build-and-Test:
     needs: Configure
@@ -113,7 +113,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           $Options = $(ConvertFrom-Json -AsHashtable '${{ toJSON(matrix.options) }}')
           $Options.Add("Keys", $(ConvertFrom-Json -AsHashtable '${{ secrets.asset-keys }}'))
@@ -127,7 +127,7 @@ jobs:
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
 
       - name: Save Asset Cache
         if: inputs.cache-assets && always()
@@ -183,7 +183,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           $Options = $(ConvertFrom-Json -AsHashtable '${{ needs.configure.outputs.options }}')
           . ${{ github.workspace }}/common/nightly-pr-to-main_compare-performance.ps1 `
@@ -197,7 +197,7 @@ jobs:
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
 
       - name: Upload Successful Performance Results Artifact
         if: ${{ success()}}
@@ -223,7 +223,7 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}/common/
         run: |
-          . ./functions.ps1
+          . ${{ github.workspace }}/common/functions.ps1
           $DryRun = [bool]::Parse( "${{ inputs.dryrun }}" )
           . ${{ github.workspace }}/common/nightly-pr-to-main_complete.ps1 `
           -RepoName ${{ inputs.repo-name }} `
@@ -233,4 +233,4 @@ jobs:
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
