--- a/.github/workflows/nightly-data-file-change.yml
+++ b/.github/workflows/nightly-data-file-change.yml
@@ -59,4 +59,4 @@ jobs:
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
