--- a/.github/workflows/nightly-documentation-update.yml
+++ b/.github/workflows/nightly-documentation-update.yml
@@ -59,5 +59,5 @@ jobs:
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
           -SeparateExamples $SeparateExamples `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
           
