--- a/.github/workflows/nightly-package-update.yml
+++ b/.github/workflows/nightly-package-update.yml
@@ -54,4 +54,4 @@ jobs:
           -GitHubUser ${{ inputs.user }} `
           -GitHubEmail ${{ inputs.email }} `
           -DryRun $DryRun `
-          *>&1 | CaptureOutputForGit
+          *>&1 | CaptureLogsForGit
